# DreamQuill

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
web/: app.js  index.html
