[package]
name = "dreamquill-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dreamquill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
dreamquill-core-sdk = { path = "../../packages/core-sdk" }
