[package]
name = "dreamquill-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.1" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
dreamquill-core-sdk = { path = "../../../packages/core-sdk" }
futures-util = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
tauri-plugin-secure-storage = "1.3"
tokio-util = "0.7"
